Fixed post-contents to not overflow

--- a/SimpleForum.Web/wwwroot/css/site.css
+++ b/SimpleForum.Web/wwwroot/css/site.css
@@ -402,6 +402,8 @@ img.post-user-property {
   padding: 1rem;
   box-sizing: border-box;
   color: var(--text-primary);
+  flex-basis: 0;
+  flex-grow: 1;
 }
 
 .post-contents:hover {
